--- a/wp-content/themes/municipio-highschool/assets/source/sass/components/navigation/_sidebar-menu.scss
+++ b/wp-content/themes/municipio-highschool/assets/source/sass/components/navigation/_sidebar-menu.scss
@@ -9,7 +9,7 @@ ul.nav-aside {
 }
 
 ul.nav-aside li a {
-    padding: $box-padding * 1.5 $box-padding * 4 $box-padding * 1.5 $box-padding * 4;
+    padding: $box-padding * 1.5 $box-spacing-horizontal $box-padding * 1.5 $box-spacing-horizontal;
     color: $base-font-color;
     font-size: ms(0);
     @include antialias();
